--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -5,6 +5,8 @@
       %span#about_toggle.question_sign ?
       %h1.site_title Takealook.if.ua
       -#%label.sorting_label а-я
+      .auth-block
+        %button#login Увійти
 
   .left_panel-content_container
     .left_panel-content
@@ -55,3 +57,5 @@
           .map-object_discus
 
 =render "popup_form"
+=render "popup_user"
+
