twitter user works

--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -7,6 +7,7 @@
       -#%label.sorting_label а-я
       .auth-block
         %button#login Увійти
+        %button#show-profile EMPTY
 
   .left_panel-content_container
     .left_panel-content
