--- a/app/views/home/_popup_form.haml
+++ b/app/views/home/_popup_form.haml
@@ -17,14 +17,14 @@
           %input#popup_search{name: 'map_object[address][street]',placeholder: 'Адреса'}
           %button.search_button
         .popup_add_files
-          .btn.add-image.margin-right>
+          .btn.add-image.margin-right.left>
             %i
               Фото існуючого стану
-            %input.add-image_input{name: 'map_object[before_photo]', type: 'file'}
-          .btn.add-image
+            %input.add-image_input.left{name: 'map_object[before_photo]', type: 'file'}
+          .btn.add-image.right
             %i
               Проект-пропозиція до об’єкта
-            %input.add-image_input{name: 'map_object[after_photo]', type: 'file'}
+            %input.add-image_input.right{name: 'map_object[after_photo]', type: 'file'}
         %input.lat{type:'hidden', name:'map_object[location][]'}
         %input.lng{type:'hidden', name:'map_object[location][]'}
         %input.popup_input.popup_comment{name:'map_object[description]',placeholder: 'Короткий опис'}>
@@ -32,7 +32,7 @@
         #img-container
           %ul#img-list
 
-        %input.btn.btn-short.save_object#submit_object{type: 'submit', value: 'Додати'}
+        %input.btn.btn-short.save_object.disabled#submit_object{type: 'submit', value: 'Додати'}
 
 
 #addition_success-popup.popup_container
