--- a/app/views/home/_popup_user.haml
+++ b/app/views/home/_popup_user.haml
@@ -3,6 +3,6 @@
   .popup
     .popup_inner
       %h2.popup_title Вхід через соціальні мережі
-      / #login-facebook.btn_social_facebook Увійти через фейсбук
+      #login-facebook.btn_social_facebook Увійти через фейсбук
       #login-twitter.btn_social_twitter Увійти через твітер
       / #login-gplus.btn_social_gplus Увійти через гугл
