--- a/app/views/home/_popup_user.haml
+++ b/app/views/home/_popup_user.haml
@@ -39,11 +39,11 @@
 
       %hr.profile-popup_line
 
-      %section
-        %h3.popup_title.profile-popup_title_small
-          Додані об’єкти
-        %ol.user_objects
-          %li Ресторан “Гуцулик”, вул. Паркова, 21
-          %li Ресторан “Гуцулик”, вул. Паркова, 21
-      %hr.profile-popup_line
+/      %section
+/        %h3.popup_title.profile-popup_title_small
+/          Додані об’єкти
+/        %ol.user_objects
+/          -#%li Ресторан “Гуцулик”, вул. Паркова, 21
+/          %li Ресторан “Гуцулик”, вул. Паркова, 21
+/      %hr.profile-popup_line
 
