--- a/app/views/home/_popup_form.haml
+++ b/app/views/home/_popup_form.haml
@@ -27,6 +27,8 @@
             %input.add-image_input.right{name: 'map_object[after_photo]', type: 'file'}
         %input.lat{type:'hidden', name:'map_object[location][]'}
         %input.lng{type:'hidden', name:'map_object[location][]'}
+        %input.street{type:'hidden', name:'map_object[street][]'}
+        %input.route{type:'hidden', name:'map_object[route][]'}
         %input.popup_input.popup_comment{name:'map_object[description]',placeholder: 'Короткий опис'}>
 
         #img-container
