--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -76,7 +76,7 @@ h1, h2, h3, h4, h5, h6{
     padding: 10px 20px;
     line-height: 40px;
 
-    font-weight: 500px;
+    font-weight: 500;
     //cursor: pointer;
     border: none;
 
@@ -98,7 +98,7 @@ h1, h2, h3, h4, h5, h6{
 .btn_social{
     @extend .input_btn_default;
     padding: 10px 42px;
-    font-weight: 300px;
+    font-weight: 300;
     margin-bottom: 20px;
 }
 
