--- a/app/views/home/index.haml
+++ b/app/views/home/index.haml
@@ -19,7 +19,7 @@
 
 
 .right_container
-
+  -# todo написати нормальний текст "про проект"
   #about
     .about_container
       %h2.about_title Про проект
@@ -37,7 +37,9 @@
     .search_container
       %input#search.search{type: 'text', placeholder: 'Введіть назву вулиці та номер будинку'}
 
-    #add_object +
+    #add_object
+      +
+      .tooltip додати пропозицію
 
 
     #map_object.map-object
