--- a/app/views/home/_popup_form.haml
+++ b/app/views/home/_popup_form.haml
@@ -38,7 +38,6 @@
   .popup_bg
   .popup
     .popup_inner
-      %a.add_success-to_project-icon
-      %a.add_success-to_project-text перглянути проект
-      %p.add_success-description Об’єкт упішно додано! </br> Дякуємо!
+
+      %p.add_success-description Об’єкт з’явиться на сайті після перевірки. </br> Дякуємо!
       %span.add_success-success-icon.popup_close
