--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -164,6 +164,12 @@ h1, h2, h3, h4, h5, h6{
             padding-left: 9px;
             margin-top: 12px;
             cursor: pointer;
+            &:hover{
+                background: #95989d;
+            }
+            &:active{
+                background: #656d77;
+            }
         }
         .auth-block{
         }
@@ -331,7 +337,7 @@ h1, h2, h3, h4, h5, h6{
             .search_container input{
                 @extend .plate;
                 padding-right: 80px;
-                background-image: inline-image("search.png");
+                background-image: inline-image("search-transparent.png");
             }
 
             .search_container .tt-suggestion{
@@ -387,9 +393,22 @@ h1, h2, h3, h4, h5, h6{
                     margin-left: -17px;
                 }
             }
-            &:hover .tooltip{
-                opacity: 1;
+            &::selection { background: transparent; }
+            &::-moz-selection { background: transparent; }
+            &:hover{
+                background-color: $blue;
+                color: #fff;
+                .tooltip{
+                    opacity: 1;
+                }
             }
+            &:active{
+                // todo add effect
+                @include box-shadow(inset 0px 12px 1px -7px #6092e5);
+                background-color: #6ba3ff;
+                @include text-shadow(0px 5px 2px #6092e5);
+            }
+
         }
 
 
@@ -405,7 +424,7 @@ h1, h2, h3, h4, h5, h6{
                 float: right;
                 cursor: pointer;
                 display: block;
-                background-color: $blue;
+                background-color: #74777b;
                 color: #fff;
                 width: 21px;
                 height: 21px;
@@ -413,6 +432,12 @@ h1, h2, h3, h4, h5, h6{
                 line-height: 18px;
                 font-weight: 500;
                 @include border-radius(50%);
+                &:hover{
+                    background-color: #95989d;
+                }
+                &:active{
+                    background-color: #656d77;
+                }
             }
             .map-object_header{
 
@@ -568,7 +593,17 @@ h1, h2, h3, h4, h5, h6{
             @extend .input_btn_default;
             @extend .popup_input_padding;
             background-color: $blue;
+            background-position: right 15px center;
             color: #fff;
+            &:hover{
+                background-color: #6ba3ff;
+            }
+            &:active{
+                // todo add effect
+                //background-color: #656d77;
+                @include box-shadow(inset 0px 12px 1px -7px #6092e5);
+                @include text-shadow(0px 5px 2px #6194e7);
+            }
         }
 
 
@@ -620,6 +655,7 @@ h1, h2, h3, h4, h5, h6{
             @extend .popup_btn_blue;
             width:72px;
             padding:0;
+            background-position: 0 0;
             background-image: inline-image("search.png");
             @include border-radius(0 3px 3px 0);
         }
@@ -632,7 +668,7 @@ h1, h2, h3, h4, h5, h6{
         .add-image{
             @extend .popup_btn_blue;
             display: inline-block;
-            background-image: inline-image("add-file.png");
+            background-image: inline-image("add-file2.png");
             position: relative;
         }
             .add-image_input{
@@ -657,7 +693,7 @@ h1, h2, h3, h4, h5, h6{
         @extend .popup_btn_blue;
         width: 162px;
         padding-right: 60px;
-        background-image: inline-image("plus.png");
+        background-image: inline-image("plus2.png");
         float: right;
     }
 }
@@ -706,6 +742,13 @@ h1, h2, h3, h4, h5, h6{
             background-repeat: no-repeat;
             background-position: center center;
             cursor: pointer;
+            &:hover{
+                background-color: #6ba3ff;
+            }
+            &:active{
+                // todo add effect
+                background-color: #656d77;
+            }
         }
 }
 
@@ -723,7 +766,7 @@ h1, h2, h3, h4, h5, h6{
     .popup{
         width: 932px;
         //height: 740px;
-        height: 370px;
+        height: 700px;
     }
 }
     //header
@@ -775,6 +818,11 @@ h1, h2, h3, h4, h5, h6{
     .profile-popup_connect_accounts{
         //width: 474px;
         float: right;
+    }
+
+    .user_objects{
+        max-height: 285px;
+        overflow-y: scroll;
     }
 
 
